# curs_project

./: .gitignore  CMakeLists.txt
include/: HomePage.h  LoginPage.h  MainWindow.h  RegPage.h  RootPage.h  ShopPage.h  main.h
lib/linux/mariadb/: libmariadb.so.3
src/: HomePage.cpp  LoginPage.cpp  MainWindow.cpp  RegPage.cpp  RootPage.cpp  ShopPage.cpp  main.cpp
